--- a/css/poster.css
+++ b/css/poster.css
@@ -12,6 +12,47 @@ html {
     color: #151515;
 }
 
+.modal {
+    display: none;
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(133, 110, 110, 0.548);
+    z-index: 2;
+    top: 0;
+    left: 0;
+    text-align: center;
+}
+
+.modal-content {
+    background-color: rgb(130, 144, 150);
+    margin: 5% auto;
+    padding: 5rem;
+    width: 700px;
+    height: 700px;
+    border-radius: 5px;
+    animation: zoom-in 1s;
+}
+
+.modal-content h1 {
+    color: aliceblue;
+}
+
+@keyframes zoom-in {
+    0% {transform: scale(0);}
+    100% {transform: scale(1);}
+}
+
+.closeBtn {
+    float: right;
+    cursor: pointer;
+    font-size: 2rem;
+}
+
+.movie-poster-modal {
+    height: 500px;
+}
+
 .movie-card {
     margin-top: 5rem;
     height: 800px;
@@ -33,6 +74,7 @@ html {
     margin-top: 2rem;
     height: 500px;
     border-radius: 10px;
+    cursor: pointer;
     transition: all 1s;
 }
 
