--- a/css/poster.css
+++ b/css/poster.css
@@ -55,7 +55,7 @@ html {
 
 .movie-card {
     margin-top: 5rem;
-    height: 800px;
+    height: 1100px;
     text-align: center;
     opacity: 0;
     animation: fade-in 3s ease-in-out forwards;
@@ -110,6 +110,55 @@ html {
 .movie-info-overview-title {
     text-transform: capitalize;
     letter-spacing: 0.1rem;
+}
+
+.carousel {
+    max-width: 500px;
+    margin: 0 auto;
+    position: relative;
+    margin-top: 2rem;
+}
+
+.carousel img {
+    width: 100%;
+    border-radius: 5px;
+}
+
+.carousel .carousel__item,
+.carousel .carousel__item--hidden {
+    display: none;
+}
+
+.carousel .carousel__item--visible {
+    display: block;
+    animation: fadeIn 0.6s;
+}
+
+@keyframes fadeIn {
+    0% {opacity: 0;}
+    100% {opacity: 1;}
+}
+
+.carousel .carousel__actions {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.carousel .carousel__actions button {
+    border-radius: 50px;
+    cursor: pointer;
+    font-weight: bold;
+    height: 50px;
+    width: 50px;
+    border: 0;
+    background-color: rgba(114, 108, 108, 0.884);
+    font-size: 2rem;
+    color: white;
+    margin: 0.5rem;
 }
 
 .movie-info-actions {
